# city2graph

./: .coverage  .coverage.Yutas-MacBook-Air-2.local.70146.XzxHnEJx  .dockerignore  .gitignore  .pre-commit-config.yaml  .pypirc  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CNAME  Dockerfile  LICENSE  PRECOMMIT.md  README.md  SECURITY.md  Untitled.ipynb  codecov.yml  docker-compose.yml  docs_environment.yml  environment.yml  fix.patch  fix_v2.patch  mkdocs.yml  pyproject.toml  requirements.txt  setup-precommit.sh  setup.py
.claude/: launch.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build_and_deploy.yaml  documentation.yml  documentation_latest.yml  documentation_version.yml  test.yml  test_deploy.yaml
city2graph/: __init__.py  base.py  contiguity.py  data.py  graph.py  metapath.py  mobility.py  morphological_network.py  morphology.py  overture.py  proximity.py  transportation.py  transportation_network.py  utils.py
city2graph/tests/: __init__.py  conftest.py  test_conftest_fixtures.py  test_graph.py  test_morphological_network.py  test_morphology.py  test_overture.py  test_proximity.py  test_sample.py  test_transportation.py  test_utils.py
city2graph/utils/: __init__.py  conversion.py  spatial.py  topology.py
conda/: .conda_build_ignore  README.md  build_conda.sh  meta.yaml
dev/: 404.html  contributing.html  index.html  installation.html  sitemap.xml
dev/api/: data.html  graph.html  index.html  mobility.html  morphology.html  proximity.html  transportation.html  utils.html
dev/examples/: add_metapaths.html  generating_graphs_from_od_matrix.html  index.html  morphological_graph_from_overturemaps.html
dev/javascripts/: gtag.js
dev/search/: search_index.json
docs/: contributing.md  index.md  installation.md  llms.txt  requirements.txt  robots.txt
docs/api/: data.md  graph.md  index.md  metapath.md  mobility.md  morphology.md  proximity.md  transportation.md  utils.md
docs/examples/: add_metapaths.ipynb  generating_graphs_from_od_matrix.ipynb  index.md  morphological_graph_from_overturemaps.ipynb
docs/javascripts/: readthedocs.js  redirect.js  rtd-flyout-fix.js
docs/overrides/: main.html
docs/source/: conf.py  contributing.rst  examples.rst  index.rst  installation.rst  robots.txt
docs/source/_static/: custom.css  gtag.js
docs/source/api/: contiguity.rst  data.rst  graph.rst  index.rst  mobility.rst  morphological_network.rst  morphology.rst  overture.rst  proximity.rst  transportation.rst  transportation_network.rst  utils.rst
docs/source/examples/: add_metapaths.ipynb  generating_graphs_by_proximity.ipynb  generating_graphs_from_od_matrix.ipynb  gtfs.ipynb  index.rst  map_attributes_on_network.ipynb  morphological_graph_from_overturemaps.ipynb  morphological_networks_from_overturemaps.ipynb  transportation_demo.ipynb
docs/stylesheets/: custom.css
notebooks/: Untitled.ipynb  demo.ipynb
tests/: .yamllint.yml  __init__.py  conftest.py  helpers.py  test_data.py  test_graph.py  test_graph_conversions.py  test_metapath.py  test_mobility.py  test_morphology.py  test_proximity.py  test_transportation.py  test_utils.py
tests/data/: sample_buildings.geojson
tests/utils/: __init__.py  helpers.py  test_conversion.py  test_spatial.py  test_topology.py
v0.2.0/: 404.html  contributing.html  index.html  installation.html  objects.inv  sitemap.xml
v0.2.0/api/: data.html  graph.html  index.html  mobility.html  morphology.html  proximity.html  transportation.html  utils.html
v0.2.0/examples/: add_metapaths.html  generating_graphs_from_od_matrix.html  index.html  morphological_graph_from_overturemaps.html
v0.2.0/overrides/partials/: nav-item.html
